Ajusta formatação de strings no jupyterhub_config.py e atualiza contagem de execução no notebook amazon.ipynb

--- a/data/jupyter/admin/amazon.ipynb
+++ b/data/jupyter/admin/amazon.ipynb
@@ -43,18 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "30a39146-9d22-406a-88ac-9e584a2c80cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "5cbfa3ba-bfd1-4bdd-85dd-6e00e86dac86",
    "metadata": {},
    "outputs": [],
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "16663182-8ca0-4e32-87b0-e5ea0c6d1a19",
    "metadata": {},
    "outputs": [
@@ -229,7 +230,7 @@
        "9  85992000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
